--- a/WhiteLagoon.Domain/WhiteLagoon.Domain.csproj
+++ b/WhiteLagoon.Domain/WhiteLagoon.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<FrameWorkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
 </Project>
