--- a/WhiteLagoon.Web/WhiteLagoon.Web.csproj
+++ b/WhiteLagoon.Web/WhiteLagoon.Web.csproj
@@ -19,6 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+    <Folder Include="Properties\ServiceDependencies\" />
     <Folder Include="wwwroot\images\VillaImages\" />
   </ItemGroup>
 
